[package]
name = "bp"
version = "1.0.0-alpha.3"
authors = ["Micooz Lee <micooz@hotmail.com>"]
description = "bp is a lightweight and efficient proxy written in pure Rust."
repository = "https://github.com/micooz/bp"
readme = "README.md"
keywords = ["bp", "proxy", "socks", "socks5", "firewall"]
license = "MIT"
edition = "2021"

[[bin]]
name = "bp"
path = "bin/bp.rs"

[features]
logging = []
monitor = []

default = [
  "logging"
]

[workspace]
members = [
    "bp-cli",
    "bp-core",
    "bp-monitor",
    "bp-test",
]

[dependencies]
bp-cli = { path = "./bp-cli" }
bp-core = { path = "./bp-core" }
clap = { version = "3.0.0-beta.5", default-features = false, features = ["std", "derive"] }
tokio = { version = "1.8.2", features = ["rt-multi-thread", "macros"] }
log = "0.4.0"

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
panic = "abort"
