[package]
name = "bp"
version = "2.0.0-alpha.3"
authors = ["Micooz Lee <micooz@hotmail.com>"]
description = "bp is a set of advanced and efficient proxy tools written in pure Rust."
repository = "https://github.com/micooz/bp"
readme = "README.md"
keywords = ["bp", "proxy", "socks", "socks5", "firewall"]
license = "MIT"
edition = "2021"

default-run = "bp"

[[bin]]
name = "bp"
path = "bin/bp.rs"

[workspace]
members = [
    "bp-cli",
    "bp-core",
    "bp-monitor",
    "e2e",
]

[dependencies]
bp-cli = { path = "./bp-cli" }
bp-core = { path = "./bp-core" }
log = "0.4.0"
clap = { version = "4.0.15", default-features = false, features = ["std", "derive"] }
tokio = { version = "1.8.2", features = ["rt-multi-thread", "macros", "signal"] }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
# panic = "abort"
# debug = 1
