[package]
name = "bp-cli"
version = "2.0.0-alpha.1"
description = "bp is a set of advanced and efficient proxy tools written in pure Rust."
edition = "2021"

[dependencies]
bp-core = { path = "../bp-core" }
bp-monitor = { path = "../bp-monitor" }
anyhow = "1.0.44"
clap = { version = "3.0.0", default-features = false, features = ["std", "derive", "cargo"] }
daemonize = "0.4.1"
dirs = "4.0.0"
lazy_static = "1.4.0"
log = "0.4.0"
tokio = { version = "1.8.2", features = ["rt-multi-thread", "macros"] }
parking_lot = "0.12.0"
serde_yaml = "0.8.21"
serde_json = "1.0.68"
