[package]
name = "bp-cli"
version = "2.0.0-alpha.3"
description = "bp is a set of advanced and efficient proxy tools written in pure Rust."
edition = "2021"

[dependencies]
bp-core = { path = "../bp-core" }
bp-monitor = { path = "../bp-monitor" }

anyhow = "1.0.44"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.0"
dirs = "4.0.0"

clap = { version = "3.0.0", default-features = false, features = ["std", "derive", "cargo"] }
tokio = { version = "1.8.2", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json = "1.0.88"
base64 = "0.13.0"

tide = "0.16.0"
async-compression = { version = "0.3.12", features = ["futures-io", "gzip"]}
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }

include_dir = "0.7.2"
sysinfo = "0.23.2"

[build-dependencies]
cmd_lib = "1.2.4"
