[package]
name = "bp-core"
version = "1.0.0-alpha.0"
edition = "2018"

[features]
monitor = []

[dependencies]
### framework
async-trait = "0.1.50"
dyn-clone = "1.0.4"
lazy_static = "1.4.0"
libc = "0.2.102"

### network
bytes = "1.0.1"
trust-dns-resolver = "0.20.3"
trust-dns-server = "0.20.3"
tokio = { version = "1.8.2", features = ["rt-multi-thread", "net", "sync", "io-util", "time"] }
socket2 = "0.4.2"

### protocol
httparse = "1.4.1"
url = "2.2.2"

### cryoto
chacha20poly1305 = "0.9.0"
hkdf = "0.11.0"
rand = { version = "0.8.4", features = ["std_rng"] }
sha2 = "0.9.5"

### logging
log = "0.4.0"

### others
clap = { version = "3.0.0-beta.2", default-features = false, features = ["std", "derive", "cargo"] }
notify = "4.0.0"
