[package]
name = "bp-core"
version = "2.0.0-alpha.3"
edition = "2021"

[dependencies]
bp-monitor = { path = "../bp-monitor" }

### framework
async-trait = "0.1.50"
anyhow = "1.0.44"
dyn-clone = "1.0.4"
lazy_static = "1.4.0"
libc = "0.2.102"
parking_lot = "0.12.0"

### network
bytes = "1.0.1"
dns-parser = "0.8.0"
trust-dns-resolver = { version = "0.21.0" }
tokio = { version = "1.8.2", features = ["rt-multi-thread", "fs", "net", "sync", "io-util", "time"] }
tokio-rustls = "0.23.2"
quinn = "0.8.0"
rustls = { version = "0.20.2", features = ["quic"] }
socket2 = "0.4.2"

### protocol
httparse = "1.4.1"
url = "2.2.2"

### cryoto
chacha20poly1305 = "0.9.0"
hkdf = "0.12.0"
rand = { version = "0.8.4", features = ["std_rng"] }
rcgen = "0.9.0"
sha2 = "0.10.0"

### logging
log = "0.4.0"
log4rs = { version = "1.0.0", features = ["gzip"] }

### others
base64 = "0.13.0"
clap = { version = "3.0.0", default-features = false, features = ["std", "derive", "cargo"] }
notify = "4.0.0"
serde_yaml = "0.8.21"
serde_json = "1.0.68"
serde = { version = "1.0.0", features = ["derive"] }
tinytemplate = "1.2.1"
futures-util = "0.3.19"

[dev-dependencies]
insta = "1.12.0"
