[package]
name = "bp-test"
version = "1.0.0-alpha.4"
authors = ["Micooz Lee <micooz@hotmail.com>"]
description = "bp is a lightweight and efficient proxy written in pure Rust."
repository = "https://github.com/micooz/bp"
readme = "README.md"
keywords = ["bp", "proxy", "socks", "socks5", "firewall"]
license = "MIT"
edition = "2021"

[dependencies]
bp-core = { path = "../bp-core" }
bytes = "1.0.1"
cmd_lib = "1.2.4"
httpmock = "0.6.2"
lazy_static = "1.4.0"
tokio = { version = "1.8.2", features = ["rt-multi-thread", "macros"] }
