[package]
name = "bp-web"
version = "2.0.0-alpha.1"
description = "bp-web is a web user interface for bp."
edition = "2021"

[dependencies]
bp-core = { path = "../bp-core" }
anyhow = "1.0.44"
clap = { version = "3.0.0-beta.2", default-features = false, features = ["std", "derive", "cargo"] }
tokio = { version = "1.8.2", features = ["net", "macros"] }
serde = { version = "1.0.0", features = ["derive"] }
tide = "0.16.0"
log = "0.4.0"
include_dir = "0.7.2"
