[package]
name = "bp"
version = "0.1.0"
authors = ["Micooz Lee <micooz@hotmail.com>"]
description = "bp is a lightweight and efficient proxy written in pure Rust."
repository = "https://github.com/micooz/bp"
readme = "README.md"
keywords = ["bp", "proxy", "socks", "socks5", "firewall"]
license = "MIT"
edition = "2018"

[features]
monitor = []

[dependencies]
bp-lib = { path = "../bp-lib" }
bp-monitor = { path = "../bp-monitor" }

### network
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }

### logging
dirs = "3.0.2"
env_logger = "0.9.0"
humantime = "2.1.0"
log = "0.4.0"
# syslog = "5.0.0"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["std", "derive", "cargo"]
