[package]
name = "dns-pollution-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
regex = "1.5.4"
trust-dns-resolver = "0.20.3"
lazy_static = "1.4.0"
tokio = { version = "1.8.2", features = ["macros"] }
