[package]
name = "github-webhook-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.0.0-beta.2", default-features = false, features = ["std", "derive", "cargo"] }
yaml-rust = "0.4.5"
serde_json = "1.0.68"
json_dotpath = "1.1.0"
cmd_lib = "1.3.0"
regex = "1.5.4"
vial = "0.1.9"
sha2 = "0.9.5"
hmac = "0.11.0"
hex = "0.4.3"
